--- a/css/homepage/bodyStyle.css
+++ b/css/homepage/bodyStyle.css
@@ -34,7 +34,8 @@ html {
     float: left;
     height: 100%;
     width: calc(825px - 300px);
-    border-left: 2px solid #332e1f;
+/*    border-left: 2px solid #332e1f;*/
+    border-left: 1px solid red;
 }
 
 #playBar{
