--- a/css/homepage/left.css
+++ b/css/homepage/left.css
@@ -2,13 +2,16 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: #383333;
+/*    background-color: #383333;*/
+    background-color: #1c1c1c;
+/*    border-right: 2px solid red;*/
 }
 
 #userInfoWrapper{
     position: relative;
 /*    border: 2px solid green;*/
-    background-color: #473f3f;
+/*    background-color: #473f3f;*/
+    background-color: black;
     width: 100%;
     height: 100px;
 }
@@ -79,11 +82,13 @@
 /*    border: 2px solid white;*/
     font-family: 'Roboto Mono', monospace;
     color: white;
-    height: 525px;
+/*    height: 525px;*/
+    height: 640px;
     font-size: 14px;
-    top:20px;
+/*    top:20px;*/
     left:50%;
     transform: translateX(-50%);
+    overflow-y: auto;
 /*    overflow-y: scroll;*/
 }
 ul{
