--- a/css/homepage/right.css
+++ b/css/homepage/right.css
@@ -29,22 +29,25 @@
     background-color: black;
 }
 
-#findFriends{
+.buttonStyle1{
     position: relative;
-    top:75px;
-    left:50%;
-    transform: translateX(-50%);
     background-color: transparent;
     color: white;
     width: 100px;
     height: 40px;
     border-radius: 25px;
-        transition-duration: 0.5s;
+    transition-duration: 0.5s;
 }
 
-#findFriends:hover{
+.buttonStyle1:hover{
     background-color: darkred;
     cursor: pointer;
+}
+
+#findFriendsButton{
+    top:75px;
+    left:50%;
+    transform: translateX(-50%);
 }
 
 #findFriendsText{
